--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
   "private": true,
   "packageManager": "npm@11.7.0",
   "dependencies": {
+    "@angular/animations": "^21.1.5",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@tailwindcss/postcss": "^4.2.0",
+    "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.2.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
