--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@primeng/themes": "^21.0.4",
+    "@primeuix/themes": "^2.0.3",
     "@tailwindcss/postcss": "^4.2.0",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
+    "primeng": "^21.1.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.2.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@angular/build": "^21.0.4",
